overflow fix

--- a/personal-site/css/beta-main.css
+++ b/personal-site/css/beta-main.css
@@ -240,6 +240,9 @@ i.material-icons {
 }
 
 @media screen and (max-width: 600px) {
+    .carousel-item{
+        overflow-y: auto;
+    }
 
     #carousel-title {
         margin: 110px 0 10px;
